# u-tokyo-datasci

./: README.md  pyproject.toml
src/u_tokyo_datasci/: __init__.py  ch01_python.ipynb  ch02_ds_library.ipynb  ch03_desc_stats_and_linear_reg.ipynb  ch04_prob_and_stats.ipynb  ch05_np_sp.ipynb  ch06_pd.ipynb  ch07_mpl_and_exercise.ipynb
src/u_tokyo_datasci/ch03/: wine_description.csv
