[project]
name = "u-tokyo-datasci"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shisotem", email = "129283841+shisotem@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "matplotlib>=3.9.1.post1",
    "ipykernel>=6.29.5",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.1",
    "requests>=2.32.3",
    "pandas-datareader>=0.10.0",
    "plotly>=5.23.0",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/u_tokyo_datasci"]
